Made footer stick to bottom. Resolved background of footer disappearing using overflow: hidden; in the .footer class on stylesheet.

--- a/style.css
+++ b/style.css
@@ -26,9 +26,13 @@ a {
 }
 
 .footer {
-    display: block;
-    background: gray;
-    
+    background: #f2f2f2;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding-bottom: 20px;
+    width: 100%;
+    overflow: hidden;
 }
 .footer li{
     padding-right: 20px;
